[fission] iframe CSS animation not smooth unless constantly moving mouse cursor over it due to offscreen throttling
Categories
(Core :: DOM: Animation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox99 | --- | wontfix |
| firefox100 | --- | wontfix |
| firefox101 | --- | fixed |
People
(Reporter: ke5trel, Assigned: tnikkel)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Visit https://codepen.io/sarazond/pen/LYGbwj.
- Note the smoothness of the starfield animation.
- Move the mouse cursor constantly over the iframe containing the animation.
Expected:
The animation is always smooth.
Actual:
The animation is only smooth when the cursor is moving over the iframe area. Opening the frame in a new tab does not have the problem. It also does not occur with dom.animations.offscreen-throttling = false or with fission.autostart = false.
Regressed by Bug 1732358.
Comment 1•4 years ago
|
||
:nika, since you are the author of the regressor, bug 1732358, could you take a look?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
The testcase uses a 3x3 pixel div and then places a lot of box shadows that are up to a few thousand pixels away from the div. The box shadow is not included in the the rect of the frame, but is in the ink overflow rect. The div is then transformed so it's out of the viewport, so it's rect is not visible.
Added in https://hg.mozilla.org/integration/autoland/rev/dd526a39c352
The related code in nsIFrame::IsScrolledOutOfView uses ink overflow rect.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•