Bug 1764891. Use ink overflow rect to determine visibility in GetFrameVisibleRectOnScreen. r=hiro

The testcase uses a 3x3 pixel div and then places a lot of box shadows that are up to a few thousand pixels away from the div. The box shadow is not included in the the rect of the frame, but is in the ink overflow rect. The div is then transformed so it's out of the viewport, so it's rect is not visible.

Added in https://hg.mozilla.org/integration/autoland/rev/dd526a39c352

The related code in nsIFrame::IsScrolledOutOfView uses ink overflow rect.

https://searchfox.org/mozilla-central/rev/b7f7de56de604bbd232c25bc6ad94ca3acf2e70b/layout/generic/nsIFrame.cpp#11355

Differential Revision: https://phabricator.services.mozilla.com/D143875